--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ nav ul li a {
 
 .section-text h2 {
     font-size: 38px;
-    padding-bottom: 25px;
+    padding: 20px 25px;
 }
 
 /* ----------------------------------------------------------- */
