--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,6 @@ body {
     clear: both;
 }
 
-.center {    
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
 .container {
     height: 500px;
@@ -99,7 +93,14 @@ nav ul li a {
     position: relative;
 }
 
-.box-img.s1 {
+.wave-top {
+    width: 100%;
+    position: absolute;
+    bottom:top;
+    left: 0;
+}
+
+.box-img.s1, .box-img.s2 {
     position: absolute;
 }
 
@@ -108,6 +109,15 @@ nav ul li a {
     padding: 20px 25px;
 }
 
+.container.section-2{
+    position: relative;
+}
+
+
+.wave-top img {
+    width: 100%;
+    height: 100%;
+}
 /* ----------------------------------------------------------- */
 
 .white {
@@ -120,9 +130,13 @@ nav ul li a {
     color: white;
 }
 
-.jumbotron.center {
+.jumbotron {
     color: white;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .jumbotron h1 {
