--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,16 @@ body {
     clear: both;
 }
 
+.center {    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 .container {
     height: 500px;
+    position: relative;
 }
 
 .container.header {
@@ -25,7 +32,7 @@ body {
     position: relative;
 }
 
-.section-container {
+.section-container,hr {
     width: 1200px;
     margin: 0 auto;
 }
@@ -77,66 +84,14 @@ nav ul li a {
     font-size: 18px;
 }
 
-.box-img {
-    width:60%;
+.button-center {
+    text-align: center;
+    margin: 20px auto;
 }
 
-.box-img img{
-    width: 100%;
-}
-
-.section-text {
-    width: 30%;
-}
-
-.container.section-1 {
-    position: relative;
-}
-
-.wave-top {
-    width: 100%;
-    position: absolute;
-    bottom:top;
-    left: 0;
-}
-
-.box-img.s1, .box-img.s2 {
-    position: absolute;
-}
-
-.section-text h2 {
-    font-size: 38px;
-    padding: 20px 25px;
-}
-
-.container.section-2{
-    position: relative;
-}
-
-
-.wave-top img {
-    width: 100%;
-    height: 100%;
-}
-/* ----------------------------------------------------------- */
-
-.white {
-    background-color: white;
-    color: black;
-}
-
-.black {
-    background-color: #333;
-    color: white;
-}
-
-.jumbotron {
+.jumbotron.center {
     color: white;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .jumbotron h1 {
@@ -152,4 +107,132 @@ nav ul li a {
 
 .jumbotron button {
     margin: 20px;
+}
+
+.box-img {
+    width:60%;
+}
+
+.box-img img{
+    width: 100%;
+}
+
+.section-text {
+    width: 30%;
+}
+
+.box-img.s1 {
+    position: absolute;
+}
+
+.section-text h2{
+    font-size: 36px;
+    padding: 25px 0;
+}
+
+.container.gray {
+    background-color: #ccc;
+}
+
+.big.container {
+    height: 900px;
+    position: relative;
+}
+
+
+.last.section-text {
+    text-align: center;
+    width: 100%;
+}
+
+.last.box-img img, .last.box-img {
+    width: 100%;
+}
+
+.container.footer {
+    background-color: #23272a
+}
+
+.new-adventure {
+    margin: 0 auto;
+    width: 450px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background: url("../img/stars.svg") 40px 30px;
+    background-size: cover;
+}
+
+.new-adventure h3{
+    font-size: 22px;
+}
+
+.box-footer {
+    margin-top: 50px;
+    width: 20%;
+}
+
+.box-footer.contact h2 {
+    font-size: 24px;
+    padding-bottom: 20px;
+}
+
+.box-footer ul {
+    list-style: none;
+    padding-bottom: 50px;
+}
+
+.box-footer ul li {
+    font-size: 14px;
+    padding-top: 10px;
+    color: white;
+}
+
+.flag, .flag img {
+    height: 10px;
+}
+
+.section-container.space {
+    padding-top: 20px;
+}
+
+.box-footer ul li a {
+    text-decoration: none;
+    color: white;
+}
+
+.wave {
+    width: 100%;
+}
+
+.wave svg {
+    display: block;
+}
+
+.wave.rotate {
+    transform: rotate(180deg);
+    transform-origin: 50% 50%;
+}
+
+/* ----------------------------------------------------------- */
+
+.white {
+    background-color: white;
+    color: black;
+}
+
+.black {
+    background-color: #333;
+    color: white;
+}
+
+.blue {
+    background-color: #5865f2;
+    opacity: 0.6;
+    color: white;
+}
+
+
+.box-footer h2, .box-footer h3, hr {
+    color: #5865f2;
 }
